--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   deploy-gh-pages:
     runs-on: ubuntu-latest
+    if: "contains(github.event.head_commit.message, '[build]')"
     steps:
       - name: Checkout
         uses: actions/checkout@v3
