--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "vue": "^3.3.4",
     "vuepress": "2.0.0-beta.62",
     "vuepress-theme-hope": "2.0.0-beta.216"
+  },
+  "dependencies": {
+    "@vuepress/utils": "2.0.0-alpha.1"
   }
 }
